# ChangeLog for app-text/duali
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/duali/ChangeLog,v 1.13 2007/01/30 01:03:46 caster Exp $

  30 Jan 2007; Vlastimil Babka <caster@gentoo.org> ChangeLog:
  Fix manifest.

  29 Jan 2007; Alec Warner <antarus@gentoo.org> +duali-0.1.1.ebuild:
  readd stable version to fix tree b0rkage

*duali-0.2.0 (22 Jan 2007)

  22 Jan 2007; Alec Warner <antarus@gentoo.org> -duali-0.1.1.ebuild,
  +duali-0.2.0.ebuild:
  bump duali for bug 67252 and bug 110441

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> duali-0.1.1.ebuild:
  Stable on ppc.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> duali-0.1.1.ebuild:
  stable on amd64

  31 Mar 2005; Aron Griffis <agriffis@gentoo.org> duali-0.1.1.ebuild:
  stable on ia64

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  duali-0.1.1.ebuild:
  marked x86 stable

  12 May 2004; Bryan Østergaard <kloeri@gentoo.org> duali-0.1.1.ebuild:
  Stable on alpha.

  12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> duali-0.1.1.ebuild:
  Don't assign default to S; header fix

*duali-0.1.1 (23 Sep 2003)

  23 Sep 2003; Seemant Kulleen <seemant@gentoo.org> duali-0.1.1.ebuild:
  Arabic language dictionary program. To be used with app-dicts/duali-data. The
  request was made by the upstream author, Mohammed Elzubeir
  <elzubeir@arabeyes.org>, in bug #26908
